[package]
name = "st7735-lcd-doublebuffering"
description = "Double-Buffered ST7735 TFT LCD driver with embedded-graphics support"
authors = ["140bpmdubstep <laineprikol@gmail.com>", "Paul Sajna <sajattack@gmail.com>"]
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = "1.0"
nb = "1.1.0"
embedded-graphics-core = "0.4"
